--- a/app/views/travels/edit.html.erb
+++ b/app/views/travels/edit.html.erb
@@ -1,10 +1,26 @@
-<h1>Editing travel</h1>
+<div class='header'>
+  <div class="flex-container">
+    <div class="header__content">
+      <%= link_to "На главную", travels_path, class:'address' %>
+      <%= link_to "Поиск",search_travels_path, class:'address' %>
+      <%= link_to "Создать",new_travel_path, class:'address' %>
+      <%= link_to "Мой профиль",user_index_path, class:'address'%>
+    </div>
+  </div>
 
-<%= render "form", travel: @travel %>
 
-<br>
+</div>
 
-<div>
-  <%= link_to "Show this travel", @travel %> |
-  <%= link_to "Back to travels", travels_path %>
+
+<div class="body">
+  <div class="flex-container">
+    <div class="body__content">
+      <%= render "form", travel: @travel %>
+      <div>
+        <%= link_to "Show this travel", @travel %>
+        <%= link_to "Back to travels", travels_path %>
+      </div>
+
+    </div>
+  </div>
 </div>
