fixed some visual bugs

--- a/app/views/user/index.html.erb
+++ b/app/views/user/index.html.erb
@@ -11,6 +11,7 @@
 </div>
 <div class="body">
   <%= link_to "Редактировать профиль", edit_user_registration_path, class: 'show_profile' %>
+  <%= button_to "Выйти", destroy_user_session_path, id: current_user.id, method: :delete, class: 'show_profile' %>
   <h1>Travels</h1>
   <div class="flex-container">
     <div class="body__content">
@@ -18,14 +19,10 @@
         <% @travels.each do |travel| %>
           <%= render travel %>
           <p>
-            <%= link_to "Show this travel", travel %>
-          </p>
-          <div class="edit__travel">
+            <%= link_to "Show this travel", travel %> |
             <%= link_to "Edit this travel", edit_travel_path(travel), class:"change-button" %> |
-
-
-            <%= button_to "Destroy this travel", travel, method: :delete, class:'change-button' %>
-          </div>
+            <%= link_to "Destroy this travel", travel, method: :delete, class:'change-button' %>
+          </p>
         <% end %>
       </div>
 
