--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -10,17 +10,20 @@
 
 </div>
 <div class="body">
-  <%= link_to "Редактировать профиль", edit_user_registration_path, class: 'show_profile' %>
-  <%= button_to "Выйти", destroy_user_session_path, id: current_user.id, method: :delete, class: 'show_profile' %>
-  <h1>Travels</h1>
+  <h1>Админ панель</h1>
   <div class="flex-container">
     <div class="body__content">
       <div id="travels">
         <% @travels.each do |travel| %>
           <%= render travel %>
           <p>
-            <%= link_to "Show this travel", travel %> |
-            <%= link_to "Edit this travel", edit_travel_path(travel), class:"change-button" %> |
+            <%= link_to "Show this travel", travel %>
+            <%= link_to "Edit this travel", edit_travel_path(travel), class:"change-button" %>
+            <% if travel.is_approved %>
+              <%= link_to "Disapprove this travel", controller: "travels", action: "disapprove", id: travel.id %>
+              <% else %>
+              <%= link_to "Approve this travel", controller: "travels", action: "approve", id: travel.id %>
+              <% end %>
             <%= button_to "Destroy this travel", travel, method: :delete, class:'change-button' %>
           </p>
         <% end %>
@@ -29,3 +32,4 @@
     </div>
   </div>
 </div>
+
