--- a/app/views/travels/index.html.erb
+++ b/app/views/travels/index.html.erb
@@ -5,6 +5,7 @@
       <%= link_to "Поиск",search_travels_path, class:'address' %>
       <%= link_to "Создать",new_travel_path, class:'address' %>
       <%= link_to "Мой профиль",user_index_path, class:'address'%>
+      <%= link_to "Админ панель",:admin_panel, class:'address'%>
     </div>
   </div>
 
@@ -25,7 +26,3 @@
     </div>
   </div>
 </div>
-
-
-
-
